implemented basic operations