@@ -25,7 +25,8 @@ javafx {
 dependencies {
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
-    testCompile 'junit:junit:4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
     testCompile "org.assertj:assertj-core:3.11.1"
 }
 
@@ -33,6 +34,15 @@ plugins.withType(JavaPlugin).configureEach {
     java {
         modularity.inferModulePath = true
     }
+}
+
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+test {
+    useJUnitPlatform()
+    jvmArgs(['--enable-preview'])
 }
 
 java {
